// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`graphql-filter should filter books 1`] = `
Object {
  "data": Object {
    "books": Array [
      Object {
        "id": "1",
        "private": false,
      },
    ],
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`graphql-filter should filter nullableBook 1`] = `
Object {
  "data": Object {
    "nullableBook1": Object {
      "id": "1",
      "private": false,
    },
    "nullableBook2": null,
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`graphql-filter should filter nullableBooks 1`] = `
Object {
  "data": Object {
    "nullableBooks": Array [
      Object {
        "id": "1",
        "private": false,
      },
      null,
    ],
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;
